tests/errors/break_outside_loop_nested_if.py
# expect_error: SyntaxError
if True:
    if True:
        break